# cmake-template

./: CMakeLists.txt  generate-vs.bat
include/: math.hpp
src/: main.cpp  math.cpp
